Bug 155308 - Dialog Record Search in Base forms: Wrong activated button "Help" instead of "Search"
Summary: Dialog Record Search in Base forms: Wrong activated button "Help" instead of ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:25.8.0 target:25.2.4
Keywords:
Depends on:
Blocks: Database
  Show dependency treegraph
 
Reported: 2023-05-15 05:59 UTC by Robert Großkopf
Modified: 2025-05-06 18:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Open the attached database, open the form and try search dialog (11.79 KB, application/vnd.oasis.opendocument.database)
2023-05-15 05:59 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-05-15 05:59:45 UTC
Created attachment 187285 [details]
Open the attached database, open the form and try search dialog

Open the attached Base file.
Open the form.
Start "Find Record" (left on navigation bar).
Dialog "Record Search" will appear.
Button "Search" will be disabled, because there is no entry for searching.
Type 'j' as Search for → Text
Button "Search" will be enabled and activated.
Press Enter.
First result is found.
Now button "Help" is activated.

"Search" should be activated here. You won't need "Help" while you have started searching. You want to get next result, not a (wrong) link to LibreOffice help.
Comment 1 Michael 2023-05-15 14:49:11 UTC
Same here, using
Version: 7.3.6.2 / LibreOffice Community
Build ID: c28ca90fd6e1a19e189fc16c05f8f8924961e12e
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

This is really annoying, as any other applications allows "Continue searching" by pressing ENTER.
Comment 2 Julien Nabet 2025-05-03 20:43:34 UTC
On pc Debian x86-64 with master sources updated today or LO Debian package 25.2.2, I don't reproduce this.
Search button is still activated once the first search is done.
Also, help gets at the right page:
https://help.libreoffice.org/25.8/en-US/text/shared/02/12100200.html?System=UNIX&DbPAR=BASE&HID=cui/ui/fmsearchdialog/box1#bm_id141684158454439

Robert/Michael: could one of you give it a new try with a recent LO version?
Comment 3 Robert Großkopf 2025-05-04 06:56:01 UTC
It is still the same buggy behavior with
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

Might be KDE-specific, but it also appears with SAL_USE_VCLPLUGIN=gen
Comment 4 Julien Nabet 2025-05-04 07:11:45 UTC
Thank you Robert for the feedback.
Indeed, I could reproduce this with gen rendering and got a crash with kf5 rendering.
Comment 5 Julien Nabet 2025-05-04 08:01:31 UTC
I've submitted a patch for review here:
https://gerrit.libreoffice.org/c/core/+/184938

Hope it'll be ok.
Comment 6 Commit Notification 2025-05-06 08:43:55 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/23d15485d5aa49cf00fac048b171b3c975b72121

tdf#155308: explicitly keep the focus by default for non gtk renderings

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2025-05-06 09:14:04 UTC
Cherry-pick for 25.2 waiting for review here:
https://gerrit.libreoffice.org/c/core/+/184981

Robert: don't hesitate to reopen if it still doesn't work on 25.8 with the patch.
Comment 8 Commit Notification 2025-05-06 18:55:58 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/e098340ca3f8f2cba5c65e3d141dd6db5ad92472

tdf#155308: explicitly keep the focus by default for non gtk renderings

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.