tdf#155308: explicitly keep the focus by default for non gtk renderings

Change-Id: I95acbbba1c5322f0b965108d092386ccc6932a4b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184938
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins